ルートパスの指定

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,34 @@
   </head>
 
   <body>
+    <%# Nav bar部分 %>
+    <nav class="navbar navbar-expand-md navbar-light bg-dark py-3 d-flex">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <h2 class= "text-white pt-1">Eazy Stock Paint</h2>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">ログイン</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">新規登録</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">ログアウト</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">在庫追加</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <%# Nav bar部分終了 %>
     <%= yield %>
   </body>
 </html>
