--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,1 +1,39 @@
-Hello World!!!!!!!!
+<div class="table-responsive mx-auto">
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th scope="col">製品名</th>
+        <th scope="col">カテゴリー</th>
+        <th scope="col">色相</th>
+        <th scope="col">光沢</th>
+        <th scope="col">残量 (kg)</th>
+        <th scope="col">塗布可能面積</th>
+        <th scope="col">規格</th>
+        <th scope="col">備考</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+        <td>@mdo</td>
+        <td>@mdo</td>
+        <td>@mdo</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td colspan="2">Larry the Bird</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
