--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,5 +1,5 @@
 <div class="table-responsive mx-auto">
-  <table class="table table-striped table-bordered">
+  <table class="table  table-dark table-striped table-bordered">
     <thead>
       <tr>
         <th scope="col">製品名</th>
@@ -14,14 +14,14 @@
     </thead>
     <tbody>
       <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
+        <th scope="row">ハイペイント</th>
+        <td>上塗り：溶剤系</td>
+        <td>NT-11</td>
+        <td>艶あり</td>
+        <td>9.5</td>
+        <td>0.13</td>
+        <td>［第4類第2石油類］</td>
+        <td>〇〇邸使用予定</td>
       </tr>
       <tr>
         <th scope="row">2</th>
