--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,18 +22,24 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#">ログイン</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">新規登録</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">ログアウト</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">在庫追加</a>
-            </li>
+            <% if user_signed_in? %>
+              <li class="nav-item">
+                <h3 class="nav-link mt-1"><%= current_user.name %>でログイン中</h3>
+              </li>
+              <li class="nav-item">
+                <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link"%>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">在庫追加</a>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <%= link_to "ログイン", new_user_session_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "新規登録", new_user_registration_path, class: "nav-link" %>
+              </li>
+            <% end %>
           </ul>
         </div>
       </div>
