エラーメッセージの表示・ルートパスの追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,7 @@
     <%# Nav bar部分 %>
     <nav class="navbar navbar-expand-md navbar-light bg-dark py-3 d-flex">
       <div class="container">
-        <a class="navbar-brand" href="#">
-          <h2 class= "text-white pt-1">Eazy Stock Paint</h2>
-        </a>
+        <%= link_to "Eazy Stock Paint", root_path, class: "nav-link text-white pt-1 fs-5" %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
