--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,6 +3,7 @@
     <div class="col-md-6 offset-md-3">
       <h2>Sign Up</h2>
       <%= form_with(model: resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render 'shared/error_messages', model: f.object, locals: { message: @message } %>
         <div class="mb-3">
           <%= f.label :name, class: "form-label" %>
           <%= f.text_field :name, class: "form-control" %>
