--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
                 <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link"%>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">在庫追加</a>
+                <%= link_to "在庫追加", new_stock_path, class: "nav-link" %>
               </li>
             <% else %>
               <li class="nav-item">
