--- a/app/views/stocks/new.html.erb
+++ b/app/views/stocks/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-3 mb-3">
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <h2>在庫追加</h2>
@@ -21,7 +21,7 @@
           <%= f.text_field :gloss, class: "form-control" %>
         </div>
         <div class="mb-3">
-          <p class="form-label"> 総重量（缶を含む） </p>
+          <p class="form-label"> 総重量（缶を含む[kg]） </p>
           <%= f.text_field :remaining_in_can, class: "form-control" %>
         </div>
         <div class="mb-3">
@@ -29,8 +29,8 @@
           <%= f.text_field :amount, class: "form-control" %>
         </div>
         <div class="mb-3">
-          <p class="form-label"> カテゴリー </p>
-          <%= f.collection_select(:category_id, Standard.all, :id, :name, {}, {class:"form-control", id:"dropdown"}) %>
+          <p class="form-label">規格 </p>
+          <%= f.collection_select(:standard_id, Standard.all, :id, :name, {}, {class:"form-control", id:"dropdown"}) %>
         </div>
         <div class="mb-3">
           <p class="form-label"> 備考 </p>
