ログイン画面・小修整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,3 +33,11 @@ body {
 .error-message {
   color: red;
 }
+
+.ragistrations-nav {
+  margin-top: 20px;
+}
+
+.ragistrations-nav h5 {
+  font-size: 15px;
+}
