--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,12 +1,12 @@
 <div class="table-responsive mx-auto">
-  <table class="table  table-dark table-striped table-bordered">
+  <table class="table  table-dark table-striped table-bordered small">
     <thead>
       <tr>
         <th scope="col">製品名</th>
         <th scope="col">カテゴリー</th>
         <th scope="col">色相</th>
         <th scope="col">光沢</th>
-        <th scope="col">残量 (kg)</th>
+        <th scope="col">残量 (缶を除く[kg])</th>
         <th scope="col">塗布可能面積</th>
         <th scope="col">規格</th>
         <th scope="col">備考</th>
@@ -20,8 +20,8 @@
           <td><%= stock.color %></td>
           <td><%= stock.gloss %></td>
           <td><%= stock.remaining %></td>
-          <td><%= stock.applicable_area %></td>
-          <td><%= stock.category.name %></td>
+          <td><%= stock.applicable_area %>　[<%= stock.amount %>kg/m<sup>2</sup>/回]</td>
+          <td><%= stock.standard.name %></td>
           <td><%= stock.remarks %></td>
         </tr>
       <% end %>
