--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
                 <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link"%>
               </li>
               <li class="nav-stock">
-                <%= link_to "在庫追加", new_stock_path, class: "nav-link" %>
+                <%= link_to "在庫追加", new_stock_path, data:{turbo: false}, class: "nav-link" %>
               </li>
               <li class="nav-stock">
                 <%= link_to "製品情報追加", new_p_information_path, class: "nav-link" %>
