--- a/app/views/stocks/edit.html.erb
+++ b/app/views/stocks/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-3 mb-3">
   <div class="row">
     <div class="col-md-6 offset-md-3">
-      <%= link_to 'この在庫情報を削除', stock_path(@stock.id), data: { turbo_method: :delete }, class: "d-btn btn btn-primary", id:"d-btn"%>
+      <%= link_to 'この在庫情報を削除', stock_path(@stock.id), data: { turbo_method: :delete }, class: "d-btn btn btn-primary"%>
       <h2>在庫更新</h2>
       <%= form_with model: @stock, data:{turbo: false}, local: true do |f| %>
         <%= render 'shared/error_messages', model: f.object, locals: { message: @message } %>
