--- a/app/views/stocks/search.html.erb
+++ b/app/views/stocks/search.html.erb
@@ -1,6 +1,6 @@
 <div class="search-wrapper text-center mt-3">
   <%= form_with(url: search_stocks_path, local: true, method: :get, class: "search-form") do |form| %>
-    <%= form.text_field :keyword, placeholder: "検索する", class: "search-input" %>
+    <%= form.text_field :keyword, placeholder: "製品名で検索する", class: "search-input" %>
     <%= form.submit "検索", class: "btn btn-primary mt-1" %>
   <% end %>
 </div>
